<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context="moe.chionlab.wechatmomentstat.ui.MainActivity">

        <TextView
            android:id="@+id/description_textview_0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginTop="10dp"
            android:text="@string/description_0" />

        <TextView
            android:id="@+id/description_textview_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/description_textview_0"
            android:layout_marginTop="20dp"
            android:text="@string/description_1" />

        <TextView
            android:id="@+id/description_textview_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/description_textview_1"
            android:layout_marginTop="20dp"
            android:text="@string/description_2" />

        <TextView
            android:id="@+id/description_html_textview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/description_textview_2"
            android:layout_marginTop="20dp"
            android:linksClickable="true"
            android:visibility="gone" />


        <LinearLayout
            android:id="@+id/ll_setting_contain"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/description_html_textview"
            android:layout_marginTop="20dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/first_action_str"
                android:textColor="@android:color/black"
                android:textSize="20sp" />

            <RadioGroup
                android:id="@+id/rg_environment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/rb_test"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="test"
                    android:textSize="20sp" />

                <RadioButton
                    android:id="@+id/rb_local"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:text="local"
                    android:textSize="20sp" />

                <RadioButton
                    android:id="@+id/rb_online"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:text="online"
                    android:textSize="20sp" />
            </RadioGroup>
        </LinearLayout>

        <Button
            android:id="@+id/setting_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/ll_setting_contain"
            android:layout_marginTop="30dp"
            android:gravity="center_vertical|left"
            android:text="@string/setting_str"
            android:textSize="20sp" />

        <Button
            android:id="@+id/launch_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/setting_button"
            android:layout_marginTop="30dp"
            android:gravity="center_vertical|left"
            android:text="@string/launch"
            android:textSize="20sp" />
    </RelativeLayout>
</ScrollView>